# docs-scraper

./: .dockerignore  .editorconfig  .gitignore  .pylintrc  AUTHORS  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENCE  LICENSE  Pipfile  README.md  bors.toml  docs_scraper  pyproject.toml  pytest.ini  tox.ini
.github/: dependabot.yml  release-draft-template.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: check-release.sh
.github/workflows/: check.yml  ci_cd.yml  publish-docker-image.yml  publish-docker-latest.yml  publish-docker-tag.yml  release-drafter.yml  test-lint.yml  tests.yml
cli/src/: index.py
config/: config.json  config_original.json
scraper/: __init__.py  __main__.py
scraper/src/: custom_dupefilter.py  documentation_spider.py  helpers.py  index.py  js_executor.py  meilisearch_helper.py
scraper/src/config/: browser_handler.py  config_loader.py  config_validator.py  nb_hits_updater.py  selectors_parser.py  urls_parser.py  version.py
scraper/src/strategies/: abstract_strategy.py  default_strategy.py
scraper/src/tests/config_files_examples/: docs-basics.config.json
scraper/src/tests/config_loader/: abstract.py  basic_test.py  domains_test.py  get_extra_facets_test.py  open_selenium_browser_test.py  selectors_exclude_test.py  start_urls_test.py
scraper/src/tests/default_strategy/: abstract.py  default_value_test.py  get_anchor_test.py  get_hierarchy_radio_test.py  page_rank_test.py  strip_chars_test.py  tags_test.py
tests/: conftest.py
tests/config_files_examples/: docs-basics.config.json  docs-custom.config.json
tests/config_loader/: abstract.py  anchors_test.py  basic_test.py  domains_test.py  get_extra_facets_test.py  open_selenium_browser_test.py  selectors_exclude_test.py  sitemap_test.py  start_urls_test.py  stop_urls_test.py
tests/default_strategy/: abstract.py  get_anchor_test.py  get_hierarchy_radio_test.py  meta_test.py
tests/meilisearch_helper/: common.py  meilisearch_helper_test.py  version_test.py
