[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pymeilisearch-scraper"
version = "0.1.dev0"
description = "Documentation scrapper for PyMeilisearch"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "ANSYS, Inc.", email="pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys Core Team", email="pyansys.core@ansys.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "importlib-metadata >=4.0",
    "Scrapy",
    "selenium",
    "requests-iap",
    "meilisearch",
    "requests",
    "python-keycloak-client",
    "requests",
]

[tool.flit.module]
name = "scraper"

[project.urls]
Homepage = "https://github.com/ansys/pymeilisearch-scraper"
Source = "https://github.com/ansys/pymeilisearch-scraper"
Tracker = "https://github.com/ansys/pymeilisearch-scraper/issues"

[project.entry-points."scraper"]
scraper = "scraper.__main__:main"


[project.optional-dependencies]
dev = [
    "pytest==7.2.0",
    "pylint==2.15.9",
    "tox==3.27.1",
    "tox-pipenv==1.10.1",
]
