[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pymeilisearch-scraper"
version = "0.2.dev0"
description = "Documentation scrapper for PyMeilisearch"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "ANSYS, Inc.", email="pyansys.core@ansys.com"},
]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Scrapy==2.11.0",
    "selenium==4.10.0",
    "requests-iap==0.2.0",
    "meilisearch==0.28.2",
    "requests==2.31.0",
    "python-keycloak-client==0.2.3",
]

[tool.flit.module]
name = "scraper"

[project.urls]
Homepage = "https://github.com/ansys/pymeilisearch-scraper"
Source = "https://github.com/ansys/pymeilisearch-scraper"
Tracker = "https://github.com/ansys/pymeilisearch-scraper/issues"

[project.entry-points."scraper"]
scraper = "scraper.__main__:main"


[project.optional-dependencies]
dev = [
    "pytest==7.2.0",
    "pylint==2.15.9",
    "tox==3.27.1",
    "tox-pipenv==1.10.1",
]
